--- a/NEWS
+++ b/NEWS
@@ -282,7 +282,9 @@ Changes on 1.2.0 since 1.1.0:
 
 * Broken symlinks are shown with appropriate icon "dialog-warning".
 
-* Added API to suspend execution of running FmJob.
+* Added API to suspend execution of running FmJob. This API applied to
+    progress dialog therefore it will be possible to pause and resume any
+    file operations jobs in middle. This may be useful in some cases.
 
 * Added 'list_view_size_units' option into config file, unset by default,
     if set then defines which units will be used in the Size column in
@@ -305,6 +307,8 @@ Changes on 1.2.0 since 1.1.0:
 * Sealed all the private data in objects. Applications should exclude use
     of sealed data and use accessor functions instead. For old code the
     workaround may be used - define FM_DISABLE_SEAL in compiler options.
+
+* A whole lot of bugfixes.
 
 
 Changes on 1.1.0 since 1.0.1:
