--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-22 20:32+0300\n"
-"PO-Revision-Date: 2013-08-01 15:46+0000\n"
+"PO-Revision-Date: 2013-08-30 14:49+0000\n"
 "Last-Translator: Juhani <juhaninumminen0@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fi\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1375371978.0\n"
+"X-POOTLE-MTIME: 1377874144.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -49,6 +49,7 @@ msgstr ""
 #: ../data/ui/app-chooser.glade.h:9
 msgid "<b>_Application name (optional, set it to keep association)</b>"
 msgstr ""
+"<b>_Sovelluksen nimi (valinnainen, aseta assosiaation säilyttämiseksi)</b>"
 
 #: ../data/ui/app-chooser.glade.h:10
 msgid "C_ustom Command Line"
@@ -547,7 +548,7 @@ msgstr "TiB"
 #: ../src/extra/fm-xml-file.c:205
 #, c-format
 msgid "Duplicate handler for tag <%s>"
-msgstr ""
+msgstr "Toinen samanlainen käsittelijä tagilla <%s>"
 
 #: ../src/extra/fm-xml-file.c:299
 #, c-format
@@ -555,6 +556,8 @@ msgid ""
 "Failed to parse '%-.*s', which should have been a digit inside a character "
 "reference (&#234; for example) - perhaps the digit is too large"
 msgstr ""
+"Merkkijonon ”%-.*s” piti olla luku merkkiviitteen sisällä (esim. &#234;), "
+"mutta sen jäsentäminen epäonnistui - ehkä luku on liian suuri"
 
 #: ../src/extra/fm-xml-file.c:310
 #, c-format
@@ -563,22 +566,26 @@ msgid ""
 "ampersand character without intending to start an entity - escape ampersand "
 "as &amp;"
 msgstr ""
+"Merkkiviite ei päättynyt puolipisteeseen; todennäköisesti käytit &-merkkiä "
+"aikomatta aloittaa entiteettiä - käytä merkintää &amp;"
 
 #: ../src/extra/fm-xml-file.c:336
 #, c-format
 msgid "Character reference '%-.*s' does not encode a permitted character"
-msgstr ""
+msgstr "Merkkiviite ”%-.*s” ei ole sallitun merkin koodaus"
 
 #: ../src/extra/fm-xml-file.c:373
 #, c-format
 msgid ""
 "Empty entity '&;' seen; valid entities are: &amp; &quot; &lt; &gt; &apos;"
 msgstr ""
+"Havaittu tyhjä entiteetti ”&;”; kelvolliset ovat: &amp; &quot; &lt; &gt; "
+"&apos;"
 
 #: ../src/extra/fm-xml-file.c:380
 #, c-format
 msgid "Entity name '%-.*s' is not known"
-msgstr ""
+msgstr "Entiteetin nimi ”%-.*s” on tuntematon"
 
 #: ../src/extra/fm-xml-file.c:384
 #, c-format
@@ -586,15 +593,17 @@ msgid ""
 "Entity did not end with a semicolon; most likely you used an ampersand "
 "character without intending to start an entity - escape ampersand as &amp;"
 msgstr ""
+"Entiteetti ei päättynyt puolipisteeseen; todennäköisesti käytit &-merkkiä "
+"aikomatta aloittaa entiteettiä - käytä merkintää &amp;"
 
 #: ../src/extra/fm-xml-file.c:594
 msgid "Space isn't allowed in the close tag"
-msgstr ""
+msgstr "Välilyönti ei ole sallittu sulkevassa tagissa"
 
 #: ../src/extra/fm-xml-file.c:603
 #, c-format
 msgid "Element '%s' was closed but no element was opened"
-msgstr ""
+msgstr "Elementti ”%s” on suljettu, mutta elementtiä ei ole avattu"
 
 #: ../src/extra/fm-xml-file.c:619
 #, c-format
@@ -776,9 +785,8 @@ msgid "Folder"
 msgstr "Hakemisto"
 
 #: ../src/gtk/fm-folder-view.c:174
-#, fuzzy
 msgid "Empty File"
-msgstr "Suorita tiedosto"
+msgstr "Tyhjä tiedosto"
 
 #: ../src/gtk/fm-folder-view.c:186
 msgid "_Invert Selection"
@@ -789,14 +797,12 @@ msgid "_Sort Files"
 msgstr "_Järjestä tiedostot"
 
 #: ../src/gtk/fm-folder-view.c:188
-#, fuzzy
 msgid "_Rename Folder"
-msgstr "Nimeä tiedosto uudelleen"
+msgstr "_Nimeä kansio uudestaan"
 
 #: ../src/gtk/fm-folder-view.c:189
-#, fuzzy
 msgid "Folder Prop_erties"
-msgstr "Tiedoston ominaisuudet"
+msgstr "_Kansion ominaisuudet"
 
 #: ../src/gtk/fm-folder-view.c:198
 msgid "Show _Hidden"
@@ -840,35 +846,33 @@ msgstr "Anna nimi luodulle hakemistolle:"
 
 #: ../src/gtk/fm-folder-view.c:835
 msgid "Creating new folder"
-msgstr ""
+msgstr "Luodaan uusi kansio"
 
 #: ../src/gtk/fm-folder-view.c:848
-#, fuzzy
 msgid "Enter a name for empty file:"
-msgstr "Anna nimi luodulle tiedostolle:"
+msgstr "Anna tyhjän tiedoston nimi:"
 
 #: ../src/gtk/fm-folder-view.c:849
-#, fuzzy
 msgid "Creating ..."
-msgstr "Luo uusi…"
+msgstr "Luodaan…"
 
 #: ../src/gtk/fm-folder-view.c:855
 msgid "New"
 msgstr "Uusi"
 
 #: ../src/gtk/fm-folder-view.c:865
-#, fuzzy, c-format
+#, c-format
 msgid "Enter a name for the new %s:"
-msgstr "Anna nimi luodulle tiedostolle:"
+msgstr "Anna nimi uudelle %s:lle:"
 
 #: ../src/gtk/fm-folder-view.c:868
-#, fuzzy, c-format
+#, c-format
 msgid "Creating %s"
-msgstr "Luodaan symbolisia linkkejä"
+msgstr "Luodaan %s"
 
 #: ../src/gtk/fm-folder-view.c:872
 msgid "_Run default application on file after creation"
-msgstr ""
+msgstr "_Suorita oletusohjelma tiedoston luonnin jälkeen"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:129
 #, c-format
@@ -940,9 +944,8 @@ msgid "Pa_ste and go"
 msgstr "_Liitä ja siirry"
 
 #: ../src/gtk/fm-path-entry.c:657
-#, fuzzy
 msgid "Entry for folder path"
-msgstr "_Vain tälle hakemistolle"
+msgstr "Tekstikenttä kansiopolkua varten"
 
 #: ../src/gtk/fm-places-model.c:752 ../src/gtk/fm-places-model.c:856
 msgid "Desktop"
@@ -1119,29 +1122,29 @@ msgstr "Siirrä _oikealle"
 #: ../src/gtk/fm-standard-view.c:801
 #, c-format
 msgid "Show %s"
-msgstr ""
+msgstr "Näytä %s"
 
 #: ../src/gtk/fm-standard-view.c:813
 msgid "_Forget width"
-msgstr ""
+msgstr "_Unohda leveys"
 
 #: ../src/gtk/fm-tab-label.c:159
 msgid "Changes active tab"
-msgstr ""
+msgstr "Vaihtaa aktiivista välilehteä"
 
 #: ../src/job/fm-dir-list-job.c:237 ../src/job/fm-dir-list-job.c:250
 #: ../src/job/fm-dir-list-job.c:348
-#, fuzzy, c-format
+#, c-format
 msgid "The specified directory '%s' is not valid"
-msgstr "Annettu hakemisto ei ole kelvollinen"
+msgstr "Annettu hakemisto ”%s” ei ole kelvollinen"
 
 #: ../src/job/fm-file-ops-job.c:520
 msgid "Cannot access destination file"
-msgstr ""
+msgstr "Kohdetiedostoon ei päästä käsiksi"
 
 #: ../src/job/fm-file-ops-job.c:563
 msgid "cannot create a link on non-native filesystem"
-msgstr ""
+msgstr "ei voida luoda linkkiä vieraalla tiedostojärjestelmällä"
 
 #: ../src/job/fm-file-ops-job-xfer.c:54
 msgid "Source and destination are the same."
@@ -1162,16 +1165,16 @@ msgstr "Kohde on lähteen alikansio"
 #: ../src/job/fm-file-ops-job-change-attr.c:318
 #, c-format
 msgid "Setting display name can be done only for single file"
-msgstr ""
+msgstr "Näyttönimen voi asettaa vain yhdelle tiedostolle"
 
 #: ../src/job/fm-file-ops-job-change-attr.c:321
 #, c-format
 msgid "Setting target can be done only for single file"
-msgstr ""
+msgstr "Kohteen voi asettaa vain yhdelle tiedostolle"
 
 #: ../src/modules/vfs-menu.c:109
 msgid "empty <Name> tag"
-msgstr ""
+msgstr "tyhjä <Name>-tagi"
 
 #: ../src/modules/vfs-menu.c:129
 msgid "tag <Not> should have exactly one children"
@@ -1193,43 +1196,43 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:230
 #, c-format
 msgid "failed to insert tag <%s> from merging file"
-msgstr ""
+msgstr "tagin <%s> lisääminen yhdistettävästä tiedostosta epäonnistui"
 
 #: ../src/modules/vfs-menu.c:339
 msgid "invalid <MergeFile> tag"
-msgstr ""
+msgstr "epäkelpo <MergeFile>-tagi"
 
 #: ../src/modules/vfs-menu.c:370
 msgid "invalid <MergeDir> tag"
-msgstr ""
+msgstr "epäkelpo <MergeDir>-tagi"
 
 #: ../src/modules/vfs-menu.c:803 ../src/modules/vfs-menu.c:1135
 #, c-format
 msgid "XML file %s error (%d:%d): "
-msgstr ""
+msgstr "XML-tiedoston %s virhe (%d:%d): "
 
 #: ../src/modules/vfs-menu.c:822 ../src/modules/vfs-menu.c:1145
 msgid "XML file doesn't contain Applications root"
-msgstr ""
+msgstr "XML-tiedostossa ei ole Appliactions-juurta"
 
 #: ../src/modules/vfs-menu.c:831
 #, c-format
 msgid "cannot find path %s in XML definitions"
-msgstr ""
+msgstr "XML-määrityksistä ei löydy polkua"
 
 #: ../src/modules/vfs-menu.c:923
 msgid "category manipulation internal error"
-msgstr ""
+msgstr "luokittelun muokkaamisessa tapahtui sisäinen virhe"
 
 #: ../src/modules/vfs-menu.c:1218 ../src/modules/vfs-menu.c:1297
 #, c-format
 msgid "cannot create XML definition for '%s'"
-msgstr ""
+msgstr "XML-määritelmää kohdetta ”%s” varten ei voida luoda"
 
 #: ../src/modules/vfs-menu.c:1282
 #, c-format
 msgid "menu path '%s' already exists"
-msgstr ""
+msgstr "valikkopolku ”%s” on jo olemassa"
 
 #: ../src/modules/vfs-menu.c:1735 ../src/modules/vfs-menu.c:2040
 #: ../src/modules/vfs-menu.c:2127
@@ -1247,78 +1250,77 @@ msgstr "Virheellinen valikkokansio"
 
 #: ../src/modules/vfs-menu.c:2064 ../src/modules/vfs-menu.c:2307
 msgid "Menu item name cannot be empty"
-msgstr ""
+msgstr "Valikon kohteen nimi ei voi olla tyhjä"
 
 #: ../src/modules/vfs-menu.c:2114
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid menu directory %s"
-msgstr "Virheellinen valikkokansio"
+msgstr "Virheellinen valikkokansio %s"
 
 #: ../src/modules/vfs-menu.c:2224 ../src/modules/vfs-menu.c:2365
-#, fuzzy
 msgid "Invalid menu item"
-msgstr "Virheellinen valikkokansio"
+msgstr "Virheellinen valikon kohde"
 
 #: ../src/modules/vfs-menu.c:2228 ../src/modules/vfs-menu.c:2369
 #, c-format
 msgid "The menu item '%s' doesn't have appropriate entry file"
-msgstr ""
+msgstr "Valikon kohteella ”%s” ei ole kirjaustiedostoa"
 
 #: ../src/modules/vfs-menu.c:2390
 msgid "Change hidden status isn't supported for menu directory"
-msgstr ""
+msgstr "Valikon kansion näkyvyysasetuksen muuttaminen ei ole tuettu"
 
 #: ../src/modules/vfs-menu.c:2548
-#, fuzzy, c-format
+#, c-format
 msgid "Setting attribute %s not supported"
-msgstr "Toiminto ei ole tuettu"
+msgstr "Ominaisuuden %s asettaminen ei ole tuettu"
 
 #: ../src/modules/vfs-menu.c:2558
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid value for attribute %s"
-msgstr "Virheellinen tiedostonimi %s"
+msgstr "Virheellinen arvo määreelle %s"
 
 #: ../src/modules/vfs-menu.c:2595
-#, fuzzy, c-format
+#, c-format
 msgid "The \"%s\" is a menu directory"
-msgstr "Virheellinen valikkokansio"
+msgstr "”%s” on valikkokansio"
 
 #: ../src/modules/vfs-menu.c:2598 ../src/modules/vfs-menu.c:3283
 #, c-format
 msgid "The \"%s\" isn't a menu item"
-msgstr ""
+msgstr "”%s” ei ole valikkokohde"
 
 #: ../src/modules/vfs-menu.c:2622
 #, c-format
 msgid "The \"%s\" is broken"
-msgstr ""
+msgstr "”%s” on rikki"
 
 #: ../src/modules/vfs-menu.c:2936 ../src/modules/vfs-menu.c:3028
 #, c-format
 msgid "Cannot create menu item \"%s\""
-msgstr ""
+msgstr "Ei voida luoda valikkokohdetta ”%s”"
 
 #: ../src/modules/vfs-menu.c:3172
 msgid "name of menu directory should not end with \".desktop\""
-msgstr ""
+msgstr "valikkokansion nimen ei pitäisi päättyä merkkijonoon ”.desktop”"
 
 #: ../src/modules/vfs-menu.c:3226
 msgid "Invalid operation with menu root"
-msgstr ""
+msgstr "Virheellinen valikon juuren operaatio"
 
 #: ../src/modules/vfs-menu.c:3290
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid menu item %s"
-msgstr "Virheellinen tiedostonimi %s"
+msgstr "Virheellinen valikkokohde %s"
 
 #: ../src/modules/vfs-menu.c:3370
 msgid "Invalid destination"
-msgstr ""
+msgstr "Virheellinen kohde"
 
 #: ../src/modules/vfs-menu.c:3639
 #, c-format
 msgid "FmMenuVFileMonitor: folder %s not found in menu cache"
-msgstr ""
+msgstr "FmMenuVFileMonitor: kansiota %s ei löytynyt valikkovälimuistista"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/modules/vfs-search.c:981
@@ -1326,77 +1328,68 @@ msgid "Search"
 msgstr "Etsi"
 
 #: ../src/modules/vfs-search.c:1050
-#, fuzzy
 msgid "Search results"
-msgstr "Etsi tiedostoja"
+msgstr "Hakutulokset"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:65
 msgid "Choose an executable file"
-msgstr ""
+msgstr "Valitse suoritettava tiedosto"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:71
-#, fuzzy
 msgid "Executable files"
-msgstr "Suorita tiedosto"
+msgstr "Suoritettavat tiedostot"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:268
-#, fuzzy
 msgid "<b>Co_mmand:</b>"
-msgstr "<b>Kohde:</b>"
+msgstr "<b>_Komento:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:276
-#, fuzzy
 msgid "_Browse..."
-msgstr "_Selaa"
+msgstr "_Selaa…"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:289
 msgid "Command to execute when the application icon is activated"
-msgstr ""
+msgstr "Sovelluksen kuvaketta napsautettaessa suoritettava komento"
 
 #. row 1: "Terminal" GtkCheckButton
 #: ../src/modules/gtk-fileprop-x-desktop.c:295
-#, fuzzy
 msgid "_Run in terminal emulator"
 msgstr "_Suorita päätteessä"
 
 #. row 2: "X-KeepTerminal" GtkCheckButton
 #: ../src/modules/gtk-fileprop-x-desktop.c:307
 msgid "_Keep terminal window open after run"
-msgstr ""
+msgstr "_Jätä pääteikkuna auki suorittamisen jälkeen"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:323
-#, fuzzy
 msgid "<b>D_escription:</b>"
-msgstr "<b>Sijainti:</b>"
+msgstr "<b>_Kuvaus:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:333
 msgid "Generic name of the application"
-msgstr ""
+msgstr "Sovelluksen yleinen nimi"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:341
-#, fuzzy
 msgid "<b>_Working directory:</b>"
-msgstr "<b>_Omistaja:</b>"
+msgstr "<b>_Työhakemisto:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:352
 msgid "The working directory to run the program in"
-msgstr ""
+msgstr "Työhakemisto, jossa ohjelma suoritetaan"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:360
-#, fuzzy
 msgid "<b>_Tooltip:</b>"
-msgstr "<b>Kohde:</b>"
+msgstr "<b>T_yökaluvihje:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:370
-#, fuzzy
 msgid "Tooltip to show on application"
-msgstr "Valitse sovellus"
+msgstr "Sovelluksella näytettävä työkaluvihje"
 
 #. TODO: handle "TryExec" field ?
 #. row 7: "StartupNotify" GtkCheckButton
 #: ../src/modules/gtk-fileprop-x-desktop.c:376
 msgid "_Use startup notification"
-msgstr ""
+msgstr "Käytä _käynnistysilmaisinta"
 
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
