--- a/po/lg.po
+++ b/po/lg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-24 00:29+0200\n"
-"PO-Revision-Date: 2013-08-30 14:04+0000\n"
+"PO-Revision-Date: 2013-08-30 20:53+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1377871492.0\n"
+"X-POOTLE-MTIME: 1377896012.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -1235,7 +1235,7 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:831
 #, c-format
 msgid "Cannot find path %s in XML definitions"
-msgstr ""
+msgstr "Sirabye ekkubo %s mu nteekateeka ezifuga enneyisa ya XML"
 
 #: ../src/modules/vfs-menu.c:923
 msgid "Category manipulation internal error"
@@ -1244,7 +1244,7 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:1218 ../src/modules/vfs-menu.c:1297
 #, c-format
 msgid "Cannot create XML definition for '%s'"
-msgstr ""
+msgstr "Nnemedwa okukola nteekateeka ya mu XML efuga '%s'"
 
 #: ../src/modules/vfs-menu.c:1282
 #, c-format
