--- a/po/lg.po
+++ b/po/lg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-24 00:29+0200\n"
-"PO-Revision-Date: 2013-08-30 20:53+0000\n"
+"PO-Revision-Date: 2013-09-01 22:11+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1377896012.0\n"
+"X-POOTLE-MTIME: 1378073490.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -1231,6 +1231,8 @@ msgstr "Fayiro eya XML eriko kiremya w'ekika kya %s (%d:%d): "
 #: ../src/modules/vfs-menu.c:822 ../src/modules/vfs-menu.c:1145
 msgid "XML file doesn't contain Applications root"
 msgstr ""
+"Okusinzira ku kulamba kw'ekitundu kyayo ekizingiramu ebirala byonna fayiro "
+"eya XML ssi ya menyu ya Puloguramu"
 
 #: ../src/modules/vfs-menu.c:831
 #, c-format
@@ -1324,6 +1326,8 @@ msgstr "Erinnya ly'etterekero erya menyu terikkirizibwa kusembyayo \".desktop\""
 #: ../src/modules/vfs-menu.c:3226
 msgid "Invalid operation with menu root"
 msgstr ""
+"Waliwo kiremya ku mukolo ogukwatagana n'ekitundu ekizingiramu ebirala byonna "
+"ekya fayiro eya menyu"
 
 #: ../src/modules/vfs-menu.c:3290
 #, c-format
