--- a/po/ru.po
+++ b/po/ru.po
@@ -7,19 +7,18 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-30 04:11+0300\n"
-"PO-Revision-Date: 2012-10-11 01:27+0200\n"
-"Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
+"PO-Revision-Date: 2013-09-03 07:32+0000\n"
+"Last-Translator: Andriy <andrej@rep.kiev.ua>\n"
 "Language-Team: gnome-cyr\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.0.5\n"
-"X-Poedit-Language: Russian\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.5.0\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-Country: RUSSIAN FEDERATION\n"
+"X-POOTLE-MTIME: 1378193532.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -30,14 +29,12 @@ msgid "Create new or change existing desktop entry"
 msgstr ""
 
 #: ../data/lxshortcut.desktop.in.h:2
-#, fuzzy
 msgid "Shortcut Editor"
-msgstr "Ярлык"
+msgstr "Редактор ярлыков"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "<b>C_ommand line to execute:</b>"
-msgstr "<b>Выполнить в командной строке:</b>"
+msgstr "<b>_Выполнить в командной строке:</b>"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "<b>File Type To be Opened:</b>"
@@ -60,10 +57,9 @@ msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:9
 msgid "<b>_Application name (optional, set it to keep association)</b>"
-msgstr ""
+msgstr "<b>_Имя приложения (опционально, установите для ассоциации)</b>"
 
 #: ../data/ui/app-chooser.glade.h:10
-#, fuzzy
 msgid "C_ustom Command Line"
 msgstr "_Пользовательская команда"
 
@@ -73,23 +69,23 @@ msgstr "Выбрать приложение"
 
 #: ../data/ui/app-chooser.glade.h:12
 msgid "_Browse"
-msgstr "_Обзор"
+msgstr "Выбр_ать"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "_Execute in terminal emulator"
-msgstr "_Выполнить в эмуляторе терминала"
+msgstr "В_ыполнить в эмуляторе терминала"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Installed Application"
-msgstr "Установленное приложение"
+msgstr "_Установленное приложение"
 
 #: ../data/ui/app-chooser.glade.h:15
 msgid "_Keep terminal window open after command execution"
-msgstr ""
+msgstr "Оставить терминал открытым после запуска _команды"
 
 #: ../data/ui/app-chooser.glade.h:16
 msgid "_Set selected application as default action of this file type"
-msgstr "_Установить выбранное приложение по умолчанию для данного типа файла"
+msgstr "У_становить выбранное приложение по умолчанию для данного типа файла"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid ""
@@ -135,9 +131,8 @@ msgid "<b>Choose Icon From:</b>"
 msgstr "<b>Изменение:</b>"
 
 #: ../data/ui/choose-icon.ui.h:2
-#, fuzzy
 msgid "Choose An Icon..."
-msgstr "Выбрать приложение"
+msgstr "Выбор значка..."
 
 #: ../data/ui/choose-icon.ui.h:3 ../src/gtk/fm-file-properties.c:364
 #, fuzzy
@@ -224,9 +219,8 @@ msgid "<b>_Execute:</b>"
 msgstr "<b>Запуск:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
-#, fuzzy
 msgid "<b>_Name:</b>"
-msgstr "<b>_Владелец:</b>"
+msgstr "<b>_Имя:</b>"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "<b>_View content:</b>"
@@ -247,7 +241,7 @@ msgstr "Видеофайлы"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Icon of the file in folder view"
-msgstr ""
+msgstr "Значок файла в просмотре папок"
 
 #: ../data/ui/file-prop.glade.h:23
 msgid "Nobody"
@@ -540,7 +534,7 @@ msgstr ""
 #: ../src/base/fm-file-launcher.c:345 ../src/base/fm-templates.c:1066
 #, c-format
 msgid "No default application is set for MIME type %s"
-msgstr ""
+msgstr "Не найдено приложение по умолчанию для MIME-типа %s"
 
 #: ../src/base/fm-path.c:163
 msgid "My Computer"
@@ -565,7 +559,7 @@ msgstr ""
 
 #: ../src/base/fm-terminal.c:248
 msgid "No terminal emulator is set in libfm config"
-msgstr ""
+msgstr "Не задан эмулятор терминала в настройках libfm"
 
 #: ../src/base/fm-thumbnailer.c:283
 #, fuzzy
@@ -574,7 +568,7 @@ msgstr "Неверный каталог меню"
 
 #: ../src/base/fm-utils.c:136
 msgid "kB"
-msgstr ""
+msgstr "кБ"
 
 #: ../src/base/fm-utils.c:153
 msgid "TB"
@@ -620,6 +614,8 @@ msgid ""
 "Failed to parse '%-.*s', which should have been a digit inside a character "
 "reference (&#234; for example) - perhaps the digit is too large"
 msgstr ""
+"Не удалось разобрать строку «%-.*s», которая должна быть числом внутри "
+"ссылки на символ (например &#234;) — возможно, номер слишком велик"
 
 #: ../src/extra/fm-xml-file.c:310
 #, c-format
@@ -628,22 +624,27 @@ msgid ""
 "ampersand character without intending to start an entity - escape ampersand "
 "as &amp;"
 msgstr ""
+"Ссылка на символ не оканчивается точкой с запятой; похоже, символ «&» был "
+"использован не для обозначения начала конструкции — экранируйте его как "
+"«&amp;»"
 
 #: ../src/extra/fm-xml-file.c:336
 #, c-format
 msgid "Character reference '%-.*s' does not encode a permitted character"
-msgstr ""
+msgstr "Ссылка на символ «%-.*s» не определяет допустимый символ"
 
 #: ../src/extra/fm-xml-file.c:373
 #, c-format
 msgid ""
 "Empty entity '&;' seen; valid entities are: &amp; &quot; &lt; &gt; &apos;"
 msgstr ""
+"Обнаружена пустая конструкция «&;»; допустимыми конструкциями являются: "
+"&amp; &quot; &lt; &gt; &apos;"
 
 #: ../src/extra/fm-xml-file.c:380
 #, c-format
 msgid "Entity name '%-.*s' is not known"
-msgstr ""
+msgstr "Имя сущности «%-.*s» неизвестно"
 
 #: ../src/extra/fm-xml-file.c:384
 #, c-format
@@ -651,6 +652,9 @@ msgid ""
 "Entity did not end with a semicolon; most likely you used an ampersand "
 "character without intending to start an entity - escape ampersand as &amp;"
 msgstr ""
+"Конструкция не заканчивается точкой с запятой; похоже, что символ «&» был "
+"использован не для обозначения начала конструкции — экранируйте его как "
+"«&amp;»"
 
 #: ../src/extra/fm-xml-file.c:594
 msgid "Space isn't allowed in the close tag"
@@ -665,6 +669,8 @@ msgstr ""
 #, c-format
 msgid "Element '%s' was closed but the currently open element is '%s'"
 msgstr ""
+"Элемент «%s» был закрыт, но открытым в настоящий момент является элемент «%"
+"s»"
 
 #: ../src/extra/fm-xml-file.c:675
 #, c-format
@@ -682,7 +688,7 @@ msgstr ""
 
 #: ../src/extra/fm-xml-file.c:842
 msgid "Document was empty or contained only whitespace"
-msgstr ""
+msgstr "Документ был пуст или содержал только пробелы"
 
 #: ../src/extra/fm-xml-file.c:1258
 msgid "fm_xml_file_to_data: XML data error"
@@ -717,9 +723,8 @@ msgid "Shows tree of directories in sidebar"
 msgstr ""
 
 #: ../src/gtk/fm-dnd-dest.c:411
-#, fuzzy
 msgid "_Cancel"
-msgstr "Отменено"
+msgstr "О_тменить"
 
 #: ../src/gtk/fm-dnd-dest.c:412
 msgid "C_opy"
@@ -754,9 +759,8 @@ msgid "Unh_ide"
 msgstr ""
 
 #: ../src/gtk/fm-file-menu.c:157
-#, fuzzy
 msgid "_Add to Bookmarks"
-msgstr "Удалить из закладок"
+msgstr "_Добавить в закладки"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "Co_mpress..."
@@ -823,9 +827,8 @@ msgid "Files of different types"
 msgstr "Файлы разных типов"
 
 #: ../src/gtk/fm-file-properties.c:1241
-#, fuzzy
 msgid "<b>File:</b>"
-msgstr "<b>Тип файла:</b>"
+msgstr "<b>Файл:</b>"
 
 #: ../src/gtk/fm-file-properties.c:1307
 msgid "Multiple Files"
@@ -869,9 +872,8 @@ msgid "Folder"
 msgstr "Папку"
 
 #: ../src/gtk/fm-folder-view.c:183
-#, fuzzy
 msgid "Empty File"
-msgstr "Запустить файл"
+msgstr "Пустой файл"
 
 #: ../src/gtk/fm-folder-view.c:195
 msgid "_Invert Selection"
@@ -933,7 +935,7 @@ msgstr "Введите имя создаваемой папки:"
 
 #: ../src/gtk/fm-folder-view.c:849
 msgid "Creating new folder"
-msgstr ""
+msgstr "Создать новую папку"
 
 #: ../src/gtk/fm-folder-view.c:862
 #, fuzzy
@@ -941,9 +943,8 @@ msgid "Enter a name for empty file:"
 msgstr "Введите имя создаваемого файла:"
 
 #: ../src/gtk/fm-folder-view.c:863
-#, fuzzy
 msgid "Creating ..."
-msgstr "Создать новый..."
+msgstr "Создается ..."
 
 #: ../src/gtk/fm-folder-view.c:869
 msgid "New"
@@ -955,13 +956,13 @@ msgid "Enter a name for the new %s:"
 msgstr "Введите имя создаваемого файла:"
 
 #: ../src/gtk/fm-folder-view.c:882
-#, fuzzy, c-format
+#, c-format
 msgid "Creating %s"
-msgstr "Создание символьных ссылок"
+msgstr "Создание %s"
 
 #: ../src/gtk/fm-folder-view.c:886
 msgid "_Run default application on file after creation"
-msgstr ""
+msgstr "Запустить приложение по умолчанию после создания файла"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:138
 #, c-format
@@ -1046,12 +1047,11 @@ msgstr "Хотите очистить корзину?"
 
 #: ../src/gtk/fm-path-entry.c:631
 msgid "Pa_ste and go"
-msgstr ""
+msgstr "Вставить и вперед"
 
 #: ../src/gtk/fm-path-entry.c:690
-#, fuzzy
 msgid "Entry for folder path"
-msgstr "Только для этой папки"
+msgstr "Строка ввода пути папки"
 
 #: ../src/gtk/fm-places-model.c:771 ../src/gtk/fm-places-model.c:977
 msgid "Desktop"
@@ -1103,9 +1103,8 @@ msgid "Re_move from Bookmark"
 msgstr "Удалить из закладок"
 
 #: ../src/gtk/fm-places-view.c:145
-#, fuzzy
 msgid "Move Bookmark _Up"
-msgstr "Удалить из закладок"
+msgstr "Переместить _закладку выше"
 
 #: ../src/gtk/fm-places-view.c:146
 #, fuzzy
@@ -1259,7 +1258,7 @@ msgstr ""
 #: ../src/gtk/fm-standard-view.c:839
 #, c-format
 msgid "Show %s"
-msgstr ""
+msgstr "Показать %s"
 
 #: ../src/gtk/fm-standard-view.c:851
 msgid "_Forget width"
@@ -1432,7 +1431,7 @@ msgstr ""
 
 #: ../src/modules/vfs-menu.c:2709
 msgid "Invalid destination"
-msgstr ""
+msgstr "Неправильное место назначения"
 
 #: ../src/modules/vfs-menu.c:2982
 #, c-format
@@ -1445,18 +1444,16 @@ msgid "Search"
 msgstr "Поиск"
 
 #: ../src/modules/vfs-search.c:1049
-#, fuzzy
 msgid "Search results"
-msgstr "Поиск файлов"
+msgstr "Результаты поиска"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
 msgid "Choose an executable file"
-msgstr ""
+msgstr "Выберите исполняемый файл"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:72
-#, fuzzy
 msgid "Executable files"
-msgstr "Запустить файл"
+msgstr "Исполняемые файлы"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:267
 #, fuzzy
@@ -1464,9 +1461,8 @@ msgid "<b>Co_mmand:</b>"
 msgstr "<b>Читать:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:275
-#, fuzzy
 msgid "_Browse..."
-msgstr "_Обзор"
+msgstr "_Просмотреть…"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:288
 msgid "Command to execute when the application icon is activated"
@@ -1515,7 +1511,7 @@ msgstr "Выбрать приложение"
 #. row 7: "StartupNotify" GtkCheckButton
 #: ../src/modules/gtk-fileprop-x-desktop.c:375
 msgid "_Use startup notification"
-msgstr ""
+msgstr "Использовать _уведомление о запуске"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
 #, fuzzy
